<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.UrunDetayActivity">

    <ImageView
        android:id="@+id/imageViewUrunDetay"
        android:layout_width="match_parent"
        android:layout_height="@dimen/urunDetay"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/textViewDetayFiyat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/Fiyat"
        android:textAlignment="center"
        android:textColor="@color/color_purple"
        android:textSize="@dimen/textSize14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewUrunDetay" />

    <TextView
        android:id="@+id/textViewDetayIsım"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/urunAdi"
        android:textAlignment="center"
        android:textColor="@color/color_black"
        android:textSize="@dimen/textSize14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDetayFiyat" />

    <TextView
        android:id="@+id/textViewDetayPorsiyon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/Porsiyon"
        android:textAlignment="center"
        android:textColor="@color/color_grey"
        android:textSize="@dimen/textSize14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDetayIsım" />

    <TextView
        android:id="@+id/textViewDetayAciklama"
        android:layout_width="@dimen/urunAciklamaWidth"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/urunAciklama"
        android:layout_marginTop="@dimen/urunAciklama"
        android:layout_marginEnd="@dimen/urunAciklama"
        android:textColor="@color/color_black"
        android:textSize="@dimen/textSize14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDetayPorsiyon"
        tools:text="@string/urunAciklama" />
</androidx.constraintlayout.widget.ConstraintLayout>